Lab2_Parser/Mparser.py
#!/usr/bin/python

import scanner
import ply.yacc as yacc
import numpy as np

tokens = scanner.tokens

precedence = (
    ('nonassoc', 'IF'),
    ('nonassoc', 'SMALLER', 'LARGER', 'SMALLEREQ', 'LARGEREQ', 'NOTEQ', 'EQ', 'ELSE'),
    ('nonassoc', 'ASSIGN', 'ADDASSIGN', 'SUBASSIGN', 'MULASSIGN', 'DIVASSIGN'), # inni tego nie maja, usunac i w tescie zrobic a = b = c
    # inicjalizacja macierzy konkretnymi wartosciami, tak jak wyzej?
    ('left', 'ADD', 'SUB', 'DOTADD', 'DOTSUB'),
    ('left', 'MUL', 'DIV', 'DOTMUL', 'DOTDIV'),
    ('left', 'UMINUS'),
    ('right', 'TRANSPOSE') # ????
)

start = 'program'


def p_error(p):
    if p:
        print("Syntax error at line {0}: LexToken({1}, '{2}')".format(p.lineno, p.type, p.value))
    else:
        print("Unexpected end of input")


def p_program(p):
    """program : instructions"""


def p_instructions(p):
    """instructions : instructions instruction
                    | instruction"""


def p_instruction(p):
    """instruction : assignment SEMICOLON
                   | call SEMICOLON
                   | loop
                   | branch
                   | LCURLBRACK instructions RCURLBRACK"""


# instrukcję przypisania, w tym różne operatory przypisania
def p_assignment(p):
    """assignment : ID assignment_operator expression
                  | ID matrix assignment_operator expression"""


def p_assignment_operator(p):
    """assignment_operator : ASSIGN
                           | ADDASSIGN
                           | SUBASSIGN
                           | MULASSIGN
                           | DIVASSIGN"""


# instrukcje break, continue oraz return i print
def p_call(p):
    """call : BREAK
            | CONTINUE
            | RETURN expression
            | PRINT print_inputs"""


def p_print_inputs(p):
    """print_inputs : print_inputs COMMA print_input
                    | print_input"""


def p_print_input(p):
    """print_input : STRING
                   | ID"""


def p_matrix_fun(p):
    """matrix_fun : fun_name LPARENT expression RPARENT"""


# macierzowe funkcje specjalne
def p_fun_name(p):
    """fun_name : EYE
                | ZEROS
                | ONES"""


# pętle: while and for
def p_loop(p):
    """loop : for
            | while"""


def p_for(p):
    """for : FOR for_expression instruction"""


def p_for_expression(p):
    """for_expression : ID ASSIGN range"""


def p_while(p):
    """while : WHILE LPARENT comparison RPARENT instruction"""


# instrukcję warunkową if-else
def p_branch(p):
    """branch : IF LPARENT comparison RPARENT instruction %prec IF
              | IF LPARENT comparison RPARENT instruction ELSE instruction"""


# zakres tablicy
def p_range(p):
    """range : num_term COLON num_term"""


def p_term(p):
    """term : ID
            | number
            | matrix
            | string"""


def p_num_term(p):
    """num_term : ID
                | number"""


def p_matrix_term(p):
    """matrix_term : ID
                   | matrix
                   | number"""


def p_number(p):
    """number : INT
              | FLOAT"""


def p_string(p):
    """string : STRING"""


# inicjalizację macierzy konkretnymi wartościami
def p_matrix(p):
    """matrix : LSQBRACK matrix_contents RSQBRACK
              | matrix_fun"""


def p_matrix_contents(p):
    """matrix_contents : matrix_contents COMMA matrix_content
                       | matrix_content"""


def p_matrix_content(p):
    """matrix_content : matrix_term"""


# EXPRESSION
def p_expression(p):
    """expression : term
                  | LPARENT expression RPARENT"""


# wyrażenia binarne, w tym operacje macierzowe 'element po elemencie'
def p_num_expression_binary(p):
    """expression : expression ADD expression %prec ADD
                  | expression SUB expression %prec SUB
                  | expression MUL expression %prec MUL
                  | expression DIV expression %prec DIV
                  | expression DOTADD expression %prec ADD
                  | expression DOTSUB expression %prec SUB
                  | expression DOTMUL expression %prec MUL
                  | expression DOTDIV expression %prec DIV"""


# negację unarną
def p_expression_negation(p):
    """expression : SUB expression %prec UMINUS"""


# transpozycję macierzy
def p_expression_transpose(p):
    """expression : expression TRANSPOSE"""
    p[0] = np.transpose(p[1])


# wyrażenia relacyjne
def p_comparison(p):
    """comparison : expression comparison_operator expression"""


def p_comparison_operator(p):
    """comparison_operator : SMALLER
                          | LARGER
                          | SMALLEREQ
                          | LARGEREQ
                          | NOTEQ
                          | EQ"""


parser = yacc.yacc()
